test/reject/23-malplaced-import.puml
@startuml

class Papalhorno {
    'import: import


    # {static} final int constante /'code: 50; '/
    + {static} int variableEstatic


    /'@startuml

    abstract class Inception {
        # {static} final int constante 'code: 0;
        ~ {static} void soyEstatico() 'code: return;
        {static} final void soyFaina() 
            code: return; 
        + {static} int variableEstatic

    }
    //a/a////a///a//''''a''''a'aaa'

    @enduml'/
    
    'import: hhhhhhh'/

}

@enduml